--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ wavs-wasi-chain = "0.3.0-beta"
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.138"
 anyhow = "1.0.95"
+const-hex = "1.14"
 
 ## Alloy
 alloy-sol-macro = { version = "0.8.13", features = ["json"] }
