--- a/components/ipfs-upload/Cargo.toml
+++ b/components/ipfs-upload/Cargo.toml
@@ -18,7 +18,7 @@ alloy-sol-types = {workspace = true}
 wavs-wasi-chain = {workspace = true}
 serde = {workspace = true}
 serde_json = {workspace = true}
-wstd = {workspace = true}
+wstd = {version = "0.5.3", features = ["json"]}
 
 [package.metadata.component]
 package = "wavs:ipfs-upload"
